[package]
name = "dubim"
version = "0.1.0"
authors = ["yapie <targaryen.akane@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.2"
ring = "0.16.14"
data-encoding = "2.2.1"
walkdir = "2"
dirs = "2.0.2"
